=== What's new in 2.0

==== Support for Kafka timestamps

`KafkaTemplate` now supports API to add records with timestamps.
New `KafkaHeaders` have been introduced regarding `timestamp` support.
Also new `KafkaConditions.timestamp()` and `KafkaMatchers.hasTimestamp()` testing utilities have been added.
See <<kafka-template>>, <<kafka-listener-annotation>> and <<testing>> for more details.