@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 the original author or authors.
+ * Copyright 2016-2017 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,6 +23,7 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
+import org.springframework.kafka.listener.KafkaListenerErrorHandler;
 import org.springframework.messaging.handler.annotation.MessageMapping;
 
 /**
@@ -76,6 +77,7 @@ import org.springframework.messaging.handler.annotation.MessageMapping;
  * {@link org.springframework.kafka.config.MultiMethodKafkaListenerEndpoint}.
  *
  * @author Gary Russell
+ * @author Venil Noronha
  *
  * @see EnableKafka
  * @see KafkaListenerAnnotationBeanPostProcessor
@@ -137,5 +139,13 @@ public @interface KafkaListener {
 	 * @return the bean name for the group.
 	 */
 	String group() default "";
+
+	/**
+	 * Set an {@link KafkaListenerErrorHandler} to invoke if the listener method throws
+	 * an exception.
+	 * @return the error handler.
+	 * @since 2.0
+	 */
+	String errorHandler() default "";
 
 }
